something something deno

--- a/deno.jsonc
+++ b/deno.jsonc
@@ -1,5 +1,6 @@
 {
   "imports": {
-    "$std/": "https://deno.land/std@0.224.0/"
+    "abcjs": "npm:abcjs@6.3.0",
+    "std/": "https://deno.land/std@0.224.0/"
   }
 }
